Adding color and full hash code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <div id="hash"></div>
+    <input type="range" min="1" max="1000" value="500" class="slider" id="timing">
     <div id="display"></div>
     <script src="js-adler32\adler32.js"></script>
     <script src="qrcodejs\qrcode.js"></script>
