--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <html>
   <head>
     <title>FRC Mscout Client Core</title>
+    <link rel="stylesheet" type="text/css" href="config\style.css">
   </head>
   <body>
-    <div id="hash"></div>
-    <input type="range" min="1" max="1000" value="500" class="slider" id="timing">
     <div id="display"></div>
+    <iframe id="iframedata" src="config\events.html" style="visibility: collapse; width: 0px; height: 0px;"></iframe>
+    <script src="src\file.js"></script>
     <script src="js-adler32\adler32.js"></script>
     <script src="qrcodejs\qrcode.js"></script>
     <script src="src\qrcodestreamer.js"></script>
-    <script src="src\main.js"></script>
+    <script src="src\events.js"></script>
+    <script src="src\layout.js"></script>
+    <script src="src\main.js" defer></script>
   </body>
 </html>
