--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-<html>
+<html manifest="config\offline.appcache">
   <head>
     <title>FRC Mscout Client Core</title>
     <link rel="stylesheet" type="text/css" href="config\style.css">
+    <link rel="stylesheet" type="text/css" href="config\initStyle.css">
+    <link rel="stylesheet" type="text/css" href="config\qrStyle.css">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
   </head>
   <body>
     <div id="display"></div>
-    <iframe id="iframedata" src="config\events.html" style="visibility: collapse; width: 0px; height: 0px;"></iframe>
-    <script src="src\file.js"></script>
+	<script src="config\eventConfig.js"></script>
     <script src="js-adler32\adler32.js"></script>
     <script src="qrcodejs\qrcode.js"></script>
     <script src="src\qrcodestreamer.js"></script>
+    <script src="src\init.js"></script>
+    <script src="src\dataprotocol.js"></script>
     <script src="src\events.js"></script>
     <script src="src\layout.js"></script>
     <script src="src\main.js" defer></script>
