Fix appcache and added favicon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html manifest="config\offline.appcache">
   <head>
     <title>FRC Mscout Client Core</title>
+	<link rel="shortcut icon" href="assets\first.ico" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="config\style.css">
     <link rel="stylesheet" type="text/css" href="config\initStyle.css">
     <link rel="stylesheet" type="text/css" href="config\qrStyle.css">
